# r1

./: README.md  colconbuild.sh  ws_clone.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/r1/lib/r1/: camera_node.py  odometry.py  robot_movement.py  teleop_robot.py
install/r1/lib/r1/src/: odometry.py  teleop_robot.py
install/r1/share/ament_index/resource_index/parent_prefix_path/: r1
install/r1/share/r1/: package.sh
install/r1/share/r1/launch/: r1.launch.py
log/: latest_build  latest_list
src/r1/: CMakeLists.txt  arduino-cli_prompt.sh
src/r1/arduino_mega/: Motor.ino  arduino_mega.ino  components.ino  serialjson.ino
src/r1/launch/: r1.launch.py
src/r1/src/: camera_node.py  odometry.py  robot_movement.py  serialarduino.py  sub_pose.py  teleop_robot.py
test/: camera_node.py
